fix: aligned margins

--- a/src/Components/PeriodWeather/PeriodWeather.css
+++ b/src/Components/PeriodWeather/PeriodWeather.css
@@ -2,7 +2,8 @@
   box-shadow: 0px 0px 3px 3px #333333;
   width: 100%;
   border-radius: 10px;
-  margin: 10px;
+  margin-top: 10px;
+  margin-bottom: 10px;
   padding: 10px;
   background-size: cover;
   display: flex;
@@ -23,13 +24,15 @@
 .daytime{
   color: rgba(var(--primary-color));
   text-shadow: 1px 1px 1px rgba(var(--secondary-color));
-  background-color: rgba(var(--secondary-color), 1);
+  background-color: rgba(var(--secondary-color), .5);
+  backdrop-filter: blur(6px);
 }
 
 .nightTime{
   color: rgba(var(--secondary-color));
   text-shadow: 1px 1px 1px rgba(var(--primary-color));
-  background-color: rgba(var(--primary-color), 1);
+  background-color: rgba(var(--primary-color), .5);
+  backdrop-filter: blur(6px);
 }
 
 .periodName{
